--- a/apps/katib/upstream/installs/katib-cert-manager/certificate.yaml
+++ b/apps/katib/upstream/installs/katib-cert-manager/certificate.yaml
@@ -1,4 +1,4 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: katib-webhook-cert
@@ -13,7 +13,7 @@ spec:
     name: katib-selfsigned-issuer
   secretName: katib-webhook-cert
 ---
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: katib-selfsigned-issuer
