--- a/apps/kfp-tekton/upstream/base/installs/multi-user/istio-authorization-config.yaml
+++ b/apps/kfp-tekton/upstream/base/installs/multi-user/istio-authorization-config.yaml
@@ -79,7 +79,7 @@ spec:
   host: ml-pipeline-ui.kubeflow.svc.cluster.local
   trafficPolicy:
     tls:
-      mode: ISTIO_MUTUAL
+      mode: DISABLE
 ---
 apiVersion: "networking.istio.io/v1alpha3"
 kind: DestinationRule
@@ -89,7 +89,7 @@ spec:
   host: ml-pipeline.kubeflow.svc.cluster.local
   trafficPolicy:
     tls:
-      mode: ISTIO_MUTUAL
+      mode: DISABLE
 ---
 apiVersion: "networking.istio.io/v1alpha3"
 kind: DestinationRule
@@ -99,4 +99,4 @@ spec:
   host: ml-pipeline-visualizationserver.kubeflow.svc.cluster.local
   trafficPolicy:
     tls:
-      mode: ISTIO_MUTUAL
+      mode: DISABLE
