--- a/apps/kfp-tekton/upstream/base/metadata/options/istio/destination-rule.yaml
+++ b/apps/kfp-tekton/upstream/base/metadata/options/istio/destination-rule.yaml
@@ -6,4 +6,4 @@ spec:
   host: metadata-grpc-service.kubeflow.svc.cluster.local
   trafficPolicy:
     tls:
-      mode: ISTIO_MUTUAL
+      mode: DISABLE
