--- a/surveily/kustomization.yaml
+++ b/surveily/kustomization.yaml
@@ -28,7 +28,7 @@ resources:
 # Kubeflow Pipelines
 - ../apps/pipeline/upstream/env/platform-agnostic-multi-user
 # KFServing
-- ../apps/kfserving/upstream/overlays/kubeflow
+# - ../apps/kfserving/upstream/overlays/kubeflow
 # Katib
 - ../apps/katib/upstream/installs/katib-with-kubeflow
 # Central Dashboard
